SigmaCodebackup3rdSep/objects/Sensors_Data__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_sensors__c</fullName>
        <label>Machine sensors</label>
        <referenceTo>Machine_sensors__c</referenceTo>
        <relationshipLabel>Sensors Data</relationshipLabel>
        <relationshipName>Sensors_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sensors Data</relationshipLabel>
        <relationshipName>Sensors_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Sensors Data</relationshipLabel>
        <relationshipName>Sensors_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sensors Data</label>
    <nameField>
        <label>Sensors Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sensors Data</pluralLabel>
    <recordTypes>
        <fullName>Critical</fullName>
        <active>true</active>
        <label>Critical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monitoring</fullName>
        <active>true</active>
        <label>Monitoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preventive</fullName>
        <active>true</active>
        <label>Preventive</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>